Fixat så att scrollbar i mobilmeny inte alltid syns

--- a/Webbsida/style.scss
+++ b/Webbsida/style.scss
@@ -48,7 +48,7 @@ header {
     nav {
         width: 100%;
         max-height: 0;
-        overflow: scroll;
+        overflow: hidden;
         padding: 0 30px 0 10px;
         margin: 0;
         top: 6.45em;
@@ -57,6 +57,7 @@ header {
         bottom: 0;
         position: fixed;
         background-color: $menu-bg; 
+        transition: 0.5s ease-in-out;
         a {
             color: $menu-text;
             font-size: 1.2em;
@@ -77,7 +78,6 @@ header {
         li>a { padding-bottom: 10px; }
     }
     .show-nav { 
-        transition: 0.5s ease-in-out;
         max-height: 100%;
     }
 }
